--- a/src/scss/components/_news-categories-buttons.scss
+++ b/src/scss/components/_news-categories-buttons.scss
@@ -1,5 +1,10 @@
 .btn-altcoin, .btn-bitcoin, .btn-ico, .btn-guide, .btn-bank, .btn-tech {
 	color: #FFF;
+	text-shadow: 0px 1px 1px #333;
+	min-width: 75px;
+	font-weight: 600;
+	font-family: "Montserrat";
+	border-radius: 30px;
 
 	&:hover {
 		color: #FFF;
