--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -72,6 +72,9 @@
 
 /* Navbar Button */
 .navbar-tropyc-button {
+	text-shadow: 0px 1px 1px #333;
+	font-family: "Montserrat";
+	border-radius: 30px;
 	min-width: 150px;
   font-size: 18px;
   font-weight: 600;
