--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,8 +1,7 @@
 .label {
-  font-size: 14px;
-  font-weight: 400;
-  color: #6f8691;
-  margin-bottom: 10px;
+	font-size: 0.9rem;
+	font-family: "Montserrat";
+	color: $gray-600;
 }
 
 .content {
