--- a/site/layouts/partials/newsletter-banner-form.html
+++ b/site/layouts/partials/newsletter-banner-form.html
@@ -4,7 +4,7 @@
 			<input type="email" value="" name="EMAIL" class="email mx-auto form-control text-center" id="mce-EMAIL" placeholder="satoshi@nakamoto.com" required>
 			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div>
-				<input type="submit" value="GET A FREE ICO REPORT" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
+				<input type="submit" value="GET A FREE ICO REPORT" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">
 			</div>
 			<div style="position: absolute; left: -5000px;" aria-hidden="true">
 				<input type="text" name="b_24fb0dbeddc7ce4265c8879b9_cd00a11da3" tabindex="-1" value="">
