--- a/src/scss/components/_newsletter-form.scss
+++ b/src/scss/components/_newsletter-form.scss
@@ -1,6 +1,6 @@
 #mc-embedded-subscribe-form {
 	input {
-		border-radius: 20px;
+		border-radius: 0.4rem;
 		&::placeholder {
 			color: #BDC3C7;
 		}
