--- a/site/layouts/exchanges/list.html
+++ b/site/layouts/exchanges/list.html
@@ -43,7 +43,7 @@
 	            </div>
 	        	</div>
 	          <div class="text-center">
-	          	<a href="{{ .affiliateLink }}" target="_blank" class="btn btn-primary btn-lg mb-2">Go</a>
+	          	<a href="{{ .affiliateLink }}" target="_blank" class="btn btn-primary mb-2">Go</a>
 	        	</div>
 	        </div>
 	      </div>
@@ -52,7 +52,6 @@
 	  </div>
 	</div>
 </div>
-{{ partial "newsletter-bleed" . }}
 {{ end }}
 
 {{ define "footer"}} {{ partial "footer" .}} {{end}}
