--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -7,7 +7,7 @@
 				<input type="text" name="b_24fb0dbeddc7ce4265c8879b9_cd00a11da3" tabindex="-1" value="">
 			</div>
 			<div class="clear">
-				<input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-block btn-danger mt-3">
+				<input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-block btn-success mt-3">
 			</div>
 		</div>
 	</form>
