--- a/site/layouts/partials/newsletter-inline-form.html
+++ b/site/layouts/partials/newsletter-inline-form.html
@@ -3,7 +3,7 @@
 		<div id="mc_embed_signup_scroll" class="mx-auto">
 			<input type="email" value="" name="EMAIL" class="email form-control text-center" id="mce-EMAIL" placeholder="satoshi@nakamoto.com" required>
 			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			<input type="submit" value="SIGN UP" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
+			<input type="submit" value="SIGN UP" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">
 			<div style="position: absolute; left: -5000px;" aria-hidden="true">
 				<input type="text" name="b_24fb0dbeddc7ce4265c8879b9_cd00a11da3" tabindex="-1" value="">
 			</div>
