--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -74,7 +74,7 @@
 .navbar-tropyc-button {
 	text-shadow: 0px 1px 1px #333;
 	font-family: "Montserrat";
-	border-radius: 30px;
+	border-radius: 0.4rem;
 	min-width: 150px;
   font-size: 18px;
   font-weight: 600;
