--- a/src/scss/pages/_premium.scss
+++ b/src/scss/pages/_premium.scss
@@ -1,111 +1,176 @@
-.premium-packs {
-	padding-top: 50px;
+.premium {
+	margin: 90px 0 90px;
 
-	h1 {
-		margin-bottom: 90px;
-		color: theme-color("primary");
-	}
+	.premium-details {
+		max-width: 460px;
+		margin-left: auto;
+		margin-right: auto;
 
-	h2 {
-		margin-top: 60px;
-		color: #FFF;
-	}
-
-	.premium-pack {
-		width: 100%;
-		min-height: 600px;
-		border: 1px solid $gray-400;
-		border-radius: 4px;
-		background: #FEFBFB;
+		h1 {
+			margin-bottom: 2rem;
+			color: theme-color("primary");
+		}
 
 		h2 {
-			margin-top: 2rem;
-			font-size: 2.5rem;
-		}
-
-		.highlight {
-			text-transform: uppercase;;
-			background: $gray-200;
-			padding: 0.5rem 2rem;
-			font-size: 0.9rem;
-			font-weight: 500;
-			letter-spacing: 0.03em;
-		}
-
-		ul {
-			letter-spacing: 0.03em;
-
-			li {
-				margin-top: 1.5rem;
-				list-style-type: none;
-			}
-		}
-
-		.collapsed-list {
-			li {
-				font-size: 0.8rem;
-				color: $gray-600;
-			}
-		}
-
-		.price-details {
-			margin-top: 1rem;
-
-			h3 {
-				font-size: 3rem;
-				font-weight: 400;
-			}
-
-			p {
-				position: relative;
-				margin-top: 15px;
-				padding-top: 15px;
-				text-align: center;
-				font-weight: 300;
-
-				&:before {
-					position: absolute;
-				  content: '';
-				  width: 90px;
-				  height: 2px;
-				  top: 0;
-				  left: 50%;
-				  margin-left: -45px;
-				  background: #CCC;
-				}
-			}
-		}
-
-		p {
+			color: $gray-700;
 			font-size: 1.2rem;
 		}
 
-		button {
-			cursor: pointer;
+		p {
+			color: $gray-600;
 		}
 	}
 
-	.economy-pack {
-		border-top: 6px solid $blue;
-
-		h2 {
-			color: $blue;
+	.premium-channels {
+		img {
+			height: 80px;
 		}
 	}
 
-	.business-pack {
-		border-top: 6px solid $yellow;
+	.price-box {
+		max-width: 280px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 30px;
+		border: 3px solid theme-color("primary");
+		border-radius: 0.4rem;
+		color: theme-color("primary");
+		text-align: center;
 
-		h2 {
-			color: $yellow;
+		h3 {
+			font-size: 5rem;
+			font-weight: 400;
+			margin-top: 1rem;
 		}
-	}
 
-	.first-class-pack {
-		border-top: 6px solid $red;
+		p {
+			position: relative;
+			margin-top: 1rem;
+			padding-top: 1rem;
+			text-align: center;
 
-		h2 {
-			color: $red;
+			&:before {
+				position: absolute;
+			  content: '';
+			  width: 120px;
+			  height: 2px;
+			  top: 0;
+			  left: 50%;
+			  margin-left: -60px;
+			  background: theme-color("primary");
+			}
 		}
 	}
 }
+
+// .premium-packs {
+// 	padding-top: 50px;
+
+// 	h1 {
+// 		margin-bottom: 90px;
+// 		color: theme-color("primary");
+// 	}
+
+// 	h2 {
+// 		margin-top: 60px;
+// 		color: #FFF;
+// 	}
+
+// 	.premium-pack {
+// 		width: 100%;
+// 		min-height: 600px;
+// 		border: 1px solid $gray-400;
+// 		border-radius: 4px;
+// 		background: #FEFBFB;
+
+// 		h2 {
+// 			margin-top: 2rem;
+// 			font-size: 2.5rem;
+// 		}
+
+// 		.highlight {
+// 			text-transform: uppercase;;
+// 			background: $gray-200;
+// 			padding: 0.5rem 2rem;
+// 			font-size: 0.9rem;
+// 			font-weight: 500;
+// 			letter-spacing: 0.03em;
+// 		}
+
+// 		ul {
+// 			letter-spacing: 0.03em;
+
+// 			li {
+// 				margin-top: 1.5rem;
+// 				list-style-type: none;
+// 			}
+// 		}
+
+// 		.collapsed-list {
+// 			li {
+// 				font-size: 0.8rem;
+// 				color: $gray-600;
+// 			}
+// 		}
+
+// 		.price-details {
+// 			margin-top: 1rem;
+
+// 			h3 {
+// 				font-size: 3rem;
+// 				font-weight: 400;
+// 			}
+
+// 			p {
+// 				position: relative;
+// 				margin-top: 15px;
+// 				padding-top: 15px;
+// 				text-align: center;
+// 				font-weight: 300;
+
+// 				&:before {
+// 					position: absolute;
+// 				  content: '';
+// 				  width: 90px;
+// 				  height: 2px;
+// 				  top: 0;
+// 				  left: 50%;
+// 				  margin-left: -45px;
+// 				  background: #CCC;
+// 				}
+// 			}
+// 		}
+
+// 		p {
+// 			font-size: 1.2rem;
+// 		}
+
+// 		button {
+// 			cursor: pointer;
+// 		}
+// 	}
+
+// 	.economy-pack {
+// 		border-top: 6px solid $blue;
+
+// 		h2 {
+// 			color: $blue;
+// 		}
+// 	}
+
+// 	.business-pack {
+// 		border-top: 6px solid $yellow;
+
+// 		h2 {
+// 			color: $yellow;
+// 		}
+// 	}
+
+// 	.first-class-pack {
+// 		border-top: 6px solid $red;
+
+// 		h2 {
+// 			color: $red;
+// 		}
+// 	}
+// }
