adds twitter embedded timeline

--- a/site/layouts/partials/news-sidebar.html
+++ b/site/layouts/partials/news-sidebar.html
@@ -15,4 +15,5 @@
 	  	<a href="{{ .URL }}" class="btn m-1 btn-{{ .Title | lower }}">{{ .Title | upper }}</a>
 	  {{ end }}
 	</div>
+	<a class="twitter-timeline" data-height="2000" data-chrome="noheader nofooter" data-theme="light" data-link-color="#19CF86" href="https://twitter.com/tropyc_crypto?ref_src=twsrc%5Etfw">Tweets by tropyc_crypto</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
