adds design changes

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -33,7 +33,7 @@
 		   width: 166px;
 		   background-size: cover;
 		   background-repeat: no-repeat;
-		   transition: background 0.5s ease-in-out;
+		   transition: background 0.5s ease 3s;
 		}
 
 		#brand-logo:hover {
