redesign of landing page

--- a/site/layouts/crypto-101/list.html
+++ b/site/layouts/crypto-101/list.html
@@ -29,14 +29,14 @@
 							<h2>{{ .Title }}</h2>
 							<ul>
 								{{ range .Data.Pages.ByDate }}
-								<li><a class="disabled" href="#" disabled>{{ .Title }} <i class="fa fa-ticket" aria-hidden="true"></i></a></li>
+								<li><a class="disabled" href="#" disabled>{{ .Title }} <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
 								{{ end }}
 							</ul>
 						</div>
 					</div>
 				{{ end }}
 			</div>
-			<p class="premium-content"><i class="fa fa-ticket" aria-hidden="true"></i> Premium Content - Go premium to access this content</p>
+			<p class="info-content"><i class="fa fa-info-circle" aria-hidden="true"></i> Coming soon!</p>
 		</div>
 	</div>
 {{ else }}
