--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,89 +2,21 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 
-<div class="top-alert alert alert-secondary alert-dismissible text-center" role="alert">
+<!-- <div class="top-alert alert alert-secondary alert-dismissible text-center" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Have a <strong>chat</strong> with us on <a href="https://t.me/Tropyc101" target="_blank" class="alert-link">Telegram</a> <i class="fa fa-telegram" aria-hidden="true"></i>
-</div>
-<div class="banner" style="background-image: url('/images/landing-page/background.png');">
-  <div class="banner-content">
-    <h1>{{ .Title }}</h1>
-    <p class="my-4"><span id="typed" class="my-5">{{ .Description }}</span></p>
-  </div>
-</div>
-<div class="title top-title">
-	<div class="titleborder"></div>
-	<div class="titlelabel">What is Tropyc Premium ?</div>
-	<div class="titleborder"></div>
-</div>
-<div class="tropyc-what">
+</div> -->
+<div class="landing-hero">
 	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-lg-10">
-				<h2 class="tropyc-summary">Tropyc premium makes things easier for anyone who’s interested in cryptoeconomics, from beginners to traders.</h2>
+		<div class="row align-items-center justify-content-between">
+			<div class="col-md-6 col-lg-5 mb-5">
+				<h1>Welcome to the crypto world</h1>
+				<p>We made sure to put everything you need in one place. Learn about crypto for free.</p>
+				<p>If you need extra help, you can subscribe for customized support.</p>
+				<p>With Tropyc, crypto becomes easy !</p>
 			</div>
-		</div>
-		<div class="customer-timeline">
-			<img class="img-fluid d-block mx-auto" src="/images/landing-page/customer-timeline.png">
-		</div>
-	</div>
-</div>
-<div class="title">
-	<div class="titleborder"></div>
-	<div class="titlelabel">How it works ?</div>
-	<div class="titleborder"></div>
-</div>
-<div class="tropyc-how">
-	<div class="container">
-		<div class="row justify-content-around">
-			<div class="col-sm-6 col-lg-5 d-flex flex-column justify-content-around">
-					<div class="step">
-						<h2>Step-by-step</h2>
-						<p>We're here to guide you with screenshots and customised support, whether to find your exchange, invest in an ICO or set-up your cold wallet.</p>
-					</div>
-					<div class="step">
-						<h2>Design your portfolio</h2>
-						<p>Together we'll build a portfolio that best suits your needs, risk aversion and future expectations - based on our token analysis.</p>
-					</div>
-					<div class="step">
-						<h2>ICOs scored</h2>
-						<p>Tropyc performs extensive due diligence on tokensales we choose to list. Get a detailed analysis of the best ICOs available on the market.</p>
-					</div>
-			</div>
-			<div class="col-sm-6 col-lg-5">
-				<img class="img-fluid d-block mx-auto" src="/images/landing-page/phone.png">
-			</div>
-		</div>
-	</div>
-</div>
-<div class="title">
-	<div class="titleborder"></div>
-	<div class="titlelabel">Why tokensales and ICOs ?</div>
-	<div class="titleborder"></div>
-</div>
-<div class="tropyc-why">
-	<div class="funding-title d-flex flex-column justify-content-center">
-		<h2><span class="text-danger">Startup funds raised</span> vs. <span class="text-success">Initial Coin Offerings</span></h2>
-		<p class="mt-2">in millions of dollars</p>
-	</div>
-	<div class="container funding-comparison-container">
-		<div class="row justify-content-around">
-			<div class="col-sm-6 col-lg-5 align-self-center">
-				<img class="img-fluid mt-3" src="/images/landing-page/chart.png">
-			</div>
-			<div class="col-sm-6 col-lg-5 d-flex flex-column justify-content-around">
-				<div class="point">
-					<h2>Revolution</h2>
-					<p>Tokensales raise more funds than startups as per the 1st of August 2017.</p>
-				</div>
-				<div class="point">
-					<h2>Tokenomics</h2>
-					<p>Check our database of tokens, we figured out their tokenomics just for you.</p>
-				</div>
-				<div class="point">
-					<h2>Rating</h2>
-					<p>Tropyc evaluates and filters tokensales before listing. We undertake a thorough analysis based on fundamentals.</p>
-				</div>
+			<div class="col-md-6 col-lg-5">
+				<img class="img-fluid" src="/images/landing-page/landing-hero.png">
 			</div>
 		</div>
 	</div>
