--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,6 +1,6 @@
 .label {
 	font-size: 0.9rem;
-	font-family: "Montserrat";
+	font-family: "Nunito";
 	color: $gray-600;
 }
 
@@ -29,5 +29,5 @@
 	text-shadow: 0px 1px 1px #333;
 	min-width: 75px;
 	font-weight: 600;
-	font-family: "Montserrat";
+	font-family: "Nunito";
 }
