--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,1 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Open+Sans:300,400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Nunito:300,400,600|Open+Sans:300,400,600,700);
