--- a/src/scss/components/_news-categories-buttons.scss
+++ b/src/scss/components/_news-categories-buttons.scss
@@ -3,7 +3,7 @@
 	text-shadow: 0px 1px 1px #333;
 	min-width: 75px;
 	font-weight: 600;
-	font-family: "Montserrat";
+	font-family: "Nunito";
 	border-radius: 30px;
 
 	&:hover {
