--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 	padding: 80px 0 50px;
 	background: #333;
 	color: #ecf0f1;
-	font-family: "Montserrat";
+	font-family: "Nunito";
 
   .footer-logo {
   	> a {
