--- a/src/scss/pages/_crypto-101-list.scss
+++ b/src/scss/pages/_crypto-101-list.scss
@@ -39,7 +39,7 @@
 	    font-weight: 600;
 	    font-size: 1.1rem;
 	    margin-bottom: 2rem;
-	    font-family: "Montserrat";
+	    font-family: "Nunito";
 	    a {
 	    	color: $gray-600;
 	    }
@@ -75,7 +75,7 @@
 		box-shadow: 0px 0px 8px 1px $blue;
 	}
 
-	.premium-content {
+	.info-content {
 		margin-top: 3rem;
 		color: $gray-600;
 	}
@@ -118,7 +118,7 @@
 	    font-weight: 600;
 	    font-size: 1.1rem;
 	    margin-bottom: 2rem;
-	    font-family: "Montserrat";
+	    font-family: "Nunito";
 	    a {
 	    	color: $gray-600;
 	    }
@@ -152,10 +152,5 @@
 
 	.ethereum-section, .invest-section	{
 		box-shadow: 0px 0px 8px 1px $blue;
-	}
-
-	.premium-content {
-		margin-top: 3rem;
-		color: $gray-600;
 	}
 }
