--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -9,6 +9,23 @@
 	}
 }
 
+.landing-hero {
+	margin: 100px 0 100px;
+
+	h1 {
+		font-size: 3.5rem;
+		margin-bottom: 1.5rem;
+		color: theme-color("primary");
+		line-height: 1.2;
+	}
+
+	p {
+		margin-bottom: 0;
+		font-size: 1.1rem;
+		color: $gray-600;
+	}
+}
+
 .bleed {
 	height: 250px;
 	background: theme-color("primary");
@@ -59,7 +76,7 @@
   	line-height: 20px;
   	margin: 0 80px;
     color: $gray-600;
-    font-family: "Montserrat";
+    font-family: "Nunito";
     font-weight: 600;
     text-transform: uppercase;
 
@@ -93,7 +110,7 @@
 		}
 
 		p {
-			font-family: "Montserrat";
+			font-family: "Nunito";
 			text-align: center;
 			font-weight: 500;
 			font-size: 1.2rem;
@@ -125,7 +142,7 @@
 		font-size: 1.1rem;
 		font-weight: 300;
 		text-align: justify;
-		font-family: "Montserrat";
+		font-family: "Nunito";
 		color: $gray-600;
 	}
 }
