styling changes to landing page

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,17 +2,13 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 
-<!-- <div class="top-alert alert alert-secondary alert-dismissible text-center" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  Have a <strong>chat</strong> with us on <a href="https://t.me/Tropyc101" target="_blank" class="alert-link">Telegram</a> <i class="fa fa-telegram" aria-hidden="true"></i>
-</div> -->
 <div class="landing-hero">
 	<div class="container">
 		<div class="row align-items-center justify-content-between">
 			<div class="col-md-6 col-lg-5 mb-5">
 				<h1>Welcome to the crypto world</h1>
 				<p>We made sure to put everything you need in one place. Learn about crypto for free.</p>
-				<p>If you need extra help, you can subscribe for customized support.</p>
+				<p>If you need extra help, you can subscribe for customised support.</p>
 				<p>With Tropyc, crypto becomes easy !</p>
 			</div>
 			<div class="col-md-6 col-lg-5">
